CB-28887 Repair broken authz check and disallow internal user calls to an endpoint without the required annotations
- Enhance tests to find invalid @Controller configurations for @InternalOnly annotation, including classes annotated with @InternalOnly
- Add EnforceAuthorizationAnnotationTest to modules with @Controller classes
- fix existing Controllers